Hide the whole top bar when showing a message

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <div class="container">
-	<div id="topbar" class="row">
-		<div id="messagebar" class="alert" hidden>
-			<button class="close">&times;</button>
-			<p></p>
-		</div>
+	<div id="messagebar" class="alert topbar row" hidden>
+		<button class="close">&times;</button>
+		<p></p>
+	</div>
+	<div id="topbar" class="topbar row">
 		<div id="search-form-container" class="panel panel-default panel-body">
 			<form id="search-form" class="form-inline">
 				<input type="text" name="username" placeholder="Username" required class="form-control">
