Use `type=search` for the search query input element

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 	<div id="topbar" class="messagebar-shadow row">
 		<div id="search-form-container" class="panel panel-default panel-body">
 			<form id="search-form" class="form-inline">
-				<input type="text" name="username" placeholder="Username" required class="form-control">
+				<input type="search" name="username" placeholder="Username" required class="form-control">
 				<button type="submit" title="Search" class="btn btn-info"><span class="glyphicon glyphicon-search"></span></button>
 			</form>
 		</div>
