--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,25 @@
 	<link rel="stylesheet" href="css/all.css">
 </head>
 
-<div class="container">
-	<div id="messagebar" class="alert row" hidden>
+<div class="navbar navbar-inverse navbar-fixed-top">
+	<div id="messagebar" class="alert invisible mb-hide">
 		<button class="close">&times;</button>
 		<p></p>
 	</div>
-	<div id="topbar" class="messagebar-shadow row">
-		<div id="update-form-container" class="panel panel-default panel-body">
-			<form id="update-form" class="form-inline">
-				<input type="text" name="username" placeholder="Username" required class="form-control">
-				<button type="submit" class="btn btn-default"><span class="glyphicon"></span></button>
-			</form>
-		</div>
-		<div class="clearfix"></div>
+	<div class="container">
+		<img id="logo" src="img/logo.svg" class="navbar-brand hidden-xs">
+		<form id="update-form" class="form-inline">
+			<input type="text" name="username" placeholder="Username" class="form-control hidden">
+			<button type="submit" class="btn btn-primary navbar-btn">
+				<span class="glyphicon"></span>
+				<span class="button-text"></span>
+			</button>
+		</form>
 	</div>
-	<div id="map" class="row panel panel-default panel-body">
-		<p class="text-center">Either the page hasn't finished loading yet, or your browser has JavaScript disabled.</p>
-	</div>
+</div>
+
+<div id="map">
+	<p class="text-center">Either the page hasn't finished loading yet, or your browser has JavaScript disabled.</p>
 </div>
 
 <script src="js/require.js" data-main="js/main"></script>
