--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Map of the members of the forum thread for xkcd #1190">
 	<title>Not AnOTTer Map</title>
-	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
