Add `alt` attribute to the logo picture

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 		<p></p>
 	</div>
 	<div class="container">
-		<img id="logo" src="img/logo.svg" class="navbar-brand hidden-xs">
+		<img id="logo" src="img/logo.svg" alt="chirpingmustard.com logo" class="navbar-brand hidden-xs">
 		<form id="update-form" class="form-inline">
 			<input type="text" name="username" placeholder="Username" class="form-control hidden">
 			<button type="submit" class="btn btn-primary navbar-btn">
