Get the project's version for the about modal
For this, a new multi task `build-id` was written to get git's `HEAD` id
and turn it into a SemVer-compliant version, resorting to reading
`package.json` if git isn't available.  While we were at it, the `publish`
task was rewritten to not use `grunt-gh-pages`'s internal git functions,
calling `grunt.util.spawn` directly.

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <aside id="about-modal" hidden>
-	<h2>Not AnOTTer Map v0.5.2+56</h2>
+	<h2>Not AnOTTer Map {{VERSION}}</h2>
 	<p style="font-style: italic;">
 		<span title="for lawyers: © 2013-2014 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
 		<br>
