:lipstick: Small changes in the modals
- Open all external links in a new window
- Note about the settings' storage location and reload requirement
- Fix a typo in the about modal

--- a/src/index.html
+++ b/src/index.html
@@ -48,31 +48,32 @@
 
 	<section>
 	<h3>About</h3>
-		<p>This is an interactive map showing the members of the <a href="http://forums.xkcd.com/viewtopic.php?t=101043">discussion thread</a> for the xkcd comic <a href="http://xkcd.com/1190/">#1190: “Time”</a>.
-		<p>This page's source code is publicly available on <a href="https://github.com/AluisioASG/ottermap">GitHub</a> under the terms of the Mozilla Public License, v. 2.0.
+		<p>This is an interactive map showing the members of the <a href="http://forums.xkcd.com/viewtopic.php?t=101043" target="_blank">discussion thread</a> for the xkcd comic <a href="http://xkcd.com/1190/" target="_blank">#1190: “Time”</a>.
+		<p>This page's source code is publicly available on <a href="https://github.com/AluisioASG/ottermap" target="_blank">GitHub</a> under the terms of the Mozilla Public License, v. 2.0.
 	</section>
 
 	<section>
 		<h3>Credits</h3>
 		<h5>Built with:</h5>
 		<ul>
-			<li><a href="http://gruntjs.com/">Grunt</a> and plugins for build automation
-			<li><a href="http://learnboost.github.io/stylus/">Stylus</a> for style sheet authoring
-			<li><a href="http://livescript.net/">LiveScript</a> for, uh, programming
-			<li><a href="http://requirejs.org/">RequireJS</a> and plugins for code loading optimization
+			<li><a href="http://gruntjs.com/" target="_blank">Grunt</a> and plugins for build automation
+			<li><a href="http://learnboost.github.io/stylus/" target="_blank">Stylus</a> for style sheet authoring
+			<li><a href="http://livescript.net/" target="_blank">LiveScript</a> for, uh, programming
+			<li><a href="http://requirejs.org/" target="_blank">RequireJS</a> and plugins for code loading optimization
 		</ul>
 		<h5>Using:</h5>
 		<ul>
-			<li><a href="http://getbootstrap.com/">Bootstrap</a> for UI design
-			<li><a href="http://leafletjs.com/">Leaflet</a> and plugins for map drawin
-			<li><a href="http://firebase.com/">Firebase</a> for data storage and synchronization
-			<li><a href="https://github.com/AluisioASG/ottermap/tree/master/vendor/">…and others</a>
+			<li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> for UI design
+			<li><a href="http://leafletjs.com/" target="_blank">Leaflet</a> and plugins for map drawing
+			<li><a href="http://firebase.com/" target="_blank">Firebase</a> for data storage and synchronization
+			<li><a href="https://github.com/AluisioASG/ottermap/tree/master/vendor/" target="_blank">…and others</a>
 		</ul>
 	</section>
 </aside>
 
 <aside id="settings-modal" hidden>
 	<h2>Map settings</h2>
+	<p>These settings are stored in your browser's <a href="http://diveintohtml5.info/storage.html#localstorage" target="_blank">local storage</a> and may be lost when you clear that data.  Also, please note that changes will only take effect after this page is reloaded.</p>
 	<form spellcheck="false">
 		<fieldset>
 			<legend>Map layers</legend>
