Add a Contact section to the about modal

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,12 @@
 			<li><a href="https://github.com/AluisioASG/ottermap/tree/master/vendor/" target="_blank">…and others</a>
 		</ul>
 	</section>
+
+	<section>
+	<h3>Contact</h3>
+		<p>Issues with the application can be reported on <a href="https://github.com/AluisioASG/ottermap/issues" target="_blank">GitHub</a>.
+		<p>If you wish to have your marker removed from the map, please send an email to <kbd>aasg <i>plus</i> ottermap <i>at</i> chirpingmustard <i>dot</i> com</kbd> with the subject <i>“ottermap user removal”</i> and the username to be removed as the message.
+	</section>
 </aside>
 
 <aside id="settings-modal" hidden>
