Update info in the About modal
Change the link about Grunt to point at Jake instead, and update the
copyright year range.

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 <aside id="about-modal" hidden>
 	<h2>Not AnOTTer Map {{VERSION}}</h2>
 	<p style="font-style: italic;">
-		<span title="for lawyers: © 2013-2014 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
+		<span title="for lawyers: © 2013-2015 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
 		<br>
 		<span title="especially lmjb1964">for the OTT community</span>
 	</p>
@@ -56,7 +56,7 @@
 		<h3>Credits</h3>
 		<h5>Built with:</h5>
 		<ul>
-			<li><a href="http://gruntjs.com/" target="_blank">Grunt</a> and plugins for build automation
+			<li><a href="http://jakejs.com/" target="_blank">Jake</a> for build automation
 			<li><a href="http://learnboost.github.io/stylus/" target="_blank">Stylus</a> for style sheet authoring
 			<li><a href="http://livescript.net/" target="_blank">LiveScript</a> for, uh, programming
 			<li><a href="http://requirejs.org/" target="_blank">RequireJS</a> and plugins for code loading optimization
