Update release to v8.0.0

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 </div>
 
 <aside id="about-modal" hidden>
-	<h2>Not AnOTTer Map v0.7.0</h2>
+	<h2>Not AnOTTer Map v8.0.0</h2>
 	<p style="font-style: italic;">
-		<span title="for lawyers: © 2013-2014 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
+		<span title="for lawyers: © 2013-2015 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
 		<br>
 		<span title="especially lmjb1964">for the OTT community</span>
 	</p>
@@ -56,7 +56,7 @@
 		<h3>Credits</h3>
 		<h5>Built with:</h5>
 		<ul>
-			<li><a href="http://gruntjs.com/" target="_blank">Grunt</a> and plugins for build automation
+			<li><a href="http://jakejs.com/" target="_blank">Jake</a> for build automation
 			<li><a href="http://learnboost.github.io/stylus/" target="_blank">Stylus</a> for style sheet authoring
 			<li><a href="http://livescript.net/" target="_blank">LiveScript</a> for, uh, programming
 			<li><a href="http://requirejs.org/" target="_blank">RequireJS</a> and plugins for code loading optimization
@@ -68,6 +68,12 @@
 			<li><a href="http://firebase.com/" target="_blank">Firebase</a> for data storage and synchronization
 			<li><a href="https://github.com/AluisioASG/ottermap/tree/master/vendor/" target="_blank">…and others</a>
 		</ul>
+	</section>
+
+	<section>
+	<h3>Contact</h3>
+		<p>Issues with the application can be reported on <a href="https://github.com/AluisioASG/ottermap/issues" target="_blank">GitHub</a>.
+		<p>If you wish to have your marker removed from the map, please send an email to <kbd>aasg <i>plus</i> ottermap <i>at</i> chirpingmustard <i>dot</i> com</kbd> with the subject <i>“ottermap user removal”</i> and the username to be removed as the message.
 	</section>
 </aside>
 
