Make the “no JavaScript” message actually visible
The message was not being properly positioned, so now we've moved it
out of the map container (so we can center it vertically as well) and
rely on a change on the container's node tree to remove it (it'd be
automatically purged from the container before).

--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,8 @@
 	</div>
 </div>
 
-<div id="map">
-	<p class="text-center">Either the page hasn't finished loading yet, or your browser has JavaScript disabled.</p>
-</div>
+<div id="map"></div>
+<p id="noscript-msg">Either the page hasn't finished loading yet, or your browser has JavaScript disabled.</p>
 
 <aside id="about-modal" hidden>
 	<h2>Not AnOTTer Map {{VERSION}}</h2>
