Update release to v8.0.1

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
 	</div>
 </div>
 
-<div id="map">
-	<p class="text-center">Either the page hasn't finished loading yet, or your browser has JavaScript disabled.</p>
-</div>
+<div id="map"></div>
+<p id="noscript-msg">Either the page hasn't finished loading yet, or your browser has JavaScript disabled.</p>
 
 <aside id="about-modal" hidden>
-	<h2>Not AnOTTer Map v8.0.0</h2>
+	<h2>Not AnOTTer Map v8.0.1</h2>
 	<p style="font-style: italic;">
 		<span title="for lawyers: © 2013-2015 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
 		<br>
