Don't hide the upload button's icon on small screens

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 		<form id="update-form" class="form-inline">
 			<input type="text" name="username" placeholder="Username" class="form-control hidden">
 			<button type="submit" class="btn btn-primary navbar-btn">
-				<span class="glyphicon hidden-xs"></span>
+				<span class="glyphicon"></span>
 				<span class="button-text"></span>
 			</button>
 		</form>
