--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 <aside id="about-modal" hidden>
 	<h2>Not AnOTTer Map <%= htmlWebpackPlugin.options.packageVersion %></h2>
 	<p style="font-style: italic;">
-		<span title="for lawyers: © 2013-2015 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
+		<span title="for lawyers: © 2013-2017 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
 		<br>
 		<span title="especially lmjb1964">for the OTT community</span>
 	</p>
@@ -54,17 +54,16 @@
 		<h3>Credits</h3>
 		<h5>Built with:</h5>
 		<ul>
-			<li><a href="http://jakejs.com/" target="_blank">Jake</a> for build automation
-			<li><a href="http://learnboost.github.io/stylus/" target="_blank">Stylus</a> for style sheet authoring
-			<li><a href="http://livescript.net/" target="_blank">LiveScript</a> for, uh, programming
-			<li><a href="http://requirejs.org/" target="_blank">RequireJS</a> and plugins for code loading optimization
+			<li><a href="http://jakejs.com/" target="_blank">Jake</a> for some dependency management automation
+			<li><a href="https://www.typescriptlang.org/" target="_blank">TypeScript</a> for application development
+			<li><a href="https://webpack.github.io/" target="_blank">Webpack</a> and a lot of plugins for asset and module bundling
 		</ul>
 		<h5>Using:</h5>
 		<ul>
-			<li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> for UI design
+			<li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a> for UI design
 			<li><a href="http://leafletjs.com/" target="_blank">Leaflet</a> and plugins for map drawing
-			<li><a href="http://firebase.com/" target="_blank">Firebase</a> for data storage and synchronization
-			<li><a href="https://github.com/AluisioASG/ottermap/tree/master/vendor/" target="_blank">…and others</a>
+			<li><a href="https://pouchdb.com/" target="_blank">PouchDB</a> for data storage and synchronization
+			<li>…and others
 		</ul>
 	</section>
 
