--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Map of the members of the forum thread for xkcd #1190">
 	<title>Not AnOTTer Map</title>
-	<link rel="stylesheet" href="css/main.css">
-</head>
+<link href="css/style.css" rel="stylesheet"></head>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
 	<div id="messagebar" class="alert invisible mb-hide">
@@ -13,11 +12,11 @@
 		<p></p>
 	</div>
 	<div class="container">
-		<img id="logo" src="img/logo.svg" alt="chirpingmustard.com logo" class="navbar-brand hidden-xs">
+		<img id=logo src=../img/4312bac7df4dd8755a8e239d3e075faa.svg alt="chirpingmustard.com logo" class="navbar-brand hidden-xs"> 
 		<form id="update-form" class="form-inline">
 			<input type="text" name="username" placeholder="Username" class="form-control hidden">
 			<button type="submit" class="btn btn-primary navbar-btn">
-				<span class="glyphicon hidden-xs"></span>
+				<span class="glyphicon"></span>
 				<span class="button-text"></span>
 			</button>
 		</form>
@@ -38,9 +37,9 @@
 <p id="noscript-msg">Either the page hasn't finished loading yet, or your browser has JavaScript disabled.</p>
 
 <aside id="about-modal" hidden>
-	<h2>Not AnOTTer Map v8.0.1</h2>
+	<h2>Not AnOTTer Map v9.0.0</h2>
 	<p style="font-style: italic;">
-		<span title="for lawyers: © 2013-2015 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
+		<span title="for lawyers: © 2013-2017 Aluísio Augusto Silva Gonçalves">by Aluísio Augusto Silva Gonçalves</span>,
 		<br>
 		<span title="especially lmjb1964">for the OTT community</span>
 	</p>
@@ -55,17 +54,16 @@
 		<h3>Credits</h3>
 		<h5>Built with:</h5>
 		<ul>
-			<li><a href="http://jakejs.com/" target="_blank">Jake</a> for build automation
-			<li><a href="http://learnboost.github.io/stylus/" target="_blank">Stylus</a> for style sheet authoring
-			<li><a href="http://livescript.net/" target="_blank">LiveScript</a> for, uh, programming
-			<li><a href="http://requirejs.org/" target="_blank">RequireJS</a> and plugins for code loading optimization
+			<li><a href="http://jakejs.com/" target="_blank">Jake</a> for some dependency management automation
+			<li><a href="https://www.typescriptlang.org/" target="_blank">TypeScript</a> for application development
+			<li><a href="https://webpack.github.io/" target="_blank">Webpack</a> and a lot of plugins for asset and module bundling
 		</ul>
 		<h5>Using:</h5>
 		<ul>
-			<li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> for UI design
+			<li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a> for UI design
 			<li><a href="http://leafletjs.com/" target="_blank">Leaflet</a> and plugins for map drawing
-			<li><a href="http://firebase.com/" target="_blank">Firebase</a> for data storage and synchronization
-			<li><a href="https://github.com/AluisioASG/ottermap/tree/master/vendor/" target="_blank">…and others</a>
+			<li><a href="https://pouchdb.com/" target="_blank">PouchDB</a> for data storage and synchronization
+			<li>…and others
 		</ul>
 	</section>
 
@@ -111,6 +109,4 @@
 		</legend>
 	</form>
 </aside>
-
-
-<script src="js/main.js"></script>
+<script type="text/javascript" src="js/style.js"></script><script type="text/javascript" src="js/app.js"></script>
